[UPDATE] updating of data service and removal of methods, imports and files that are not